# FIAP-Tech-Challenge-Deep-Learning-Finance-Actions

./: .gitignore  README.md  env_example.txt  pyproject.toml
configs/: database.py  log_config.py
docs/: colect_finances_csv.py  collect_CSVs.py
docs/acoes/: ALUP11.SA_1year.csv  ALUP11.SA_3year.csv  ALUP11.SA_6mo.csv  AURE3.SA_1year.csv  AURE3.SA_3year.csv  AURE3.SA_6mo.csv  AXIA3.SA_1year.csv  AXIA3.SA_3year.csv  AXIA3.SA_6mo.csv  AXIA6.SA_1year.csv  AXIA6.SA_3year.csv  AXIA6.SA_6mo.csv  BRAV3.SA_1year.csv  BRAV3.SA_3year.csv  BRAV3.SA_6mo.csv  CMIG4.SA_1year.csv  CMIG4.SA_3year.csv  CMIG4.SA_6mo.csv  CPFE3.SA_1year.csv  CPFE3.SA_3year.csv  CPFE3.SA_6mo.csv  CPLE6.SA_1year.csv  CPLE6.SA_3year.csv  CPLE6.SA_6mo.csv  CSAN3.SA_1year.csv  CSAN3.SA_3year.csv  CSAN3.SA_6mo.csv  EGIE3.SA_1year.csv  EGIE3.SA_3year.csv  EGIE3.SA_6mo.csv  ENEV3.SA_1year.csv  ENEV3.SA_3year.csv  ENEV3.SA_6mo.csv  ENGI11.SA_1year.csv  ENGI11.SA_3year.csv  ENGI11.SA_6mo.csv  EQTL3.SA_1year.csv  EQTL3.SA_3year.csv  EQTL3.SA_6mo.csv  LIGT3.SA_1year.csv  (+24 more)
docs/planilhas_aux/: acoes_setor_de_energia.csv
docs/planilhas_completas/: data_actions_energy_1year.csv  data_actions_energy_3year.csv  data_actions_energy_6mo.csv
mlruns/0/: meta.yaml
mlruns/331313066263923565/: meta.yaml
mlruns/331313066263923565/5f9bfff66e9f4ca794c248c786c498aa/: meta.yaml
mlruns/331313066263923565/7c76f6a3178d44449d16e772b2cf1710/: meta.yaml
mlruns/331313066263923565/7fca4733e9d64cf7b267fc942bf857d2/: meta.yaml
mlruns/423192071240287762/: meta.yaml
mlruns/models/LSTMModel_ALUP11/: meta.yaml
(+739 files in other folders)
