[project]
name = "fiap-tech-challenge-deep-learning-finance-actions"
version = "0.1.0"
description = ""
authors = [
    {name = "KevinOFL",email = "kevinsilvaofl@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13, <3.15"
dependencies = [
    "torch (>=2.9.1,<3.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "fastapi (>=0.121.2,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "yfinance (>=0.2.66,<0.3.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "mlflow (>=3.6.0,<4.0.0)",
    "optuna (>=4.6.0,<5.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
